--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,3 +19,16 @@ body {
 .link-rapido {
     background-color: #20cabd;
 }
+
+.fade-scale {
+transform: scale(0);
+opacity: 0;
+-webkit-transition: all .25s linear;
+-o-transition: all .25s linear;
+transition: all .25s linear;
+}
+
+.fade-scale.in {
+opacity: 1;
+transform: scale(1);
+}
